--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
   /* background-size: cover; */
 }
 
+/* header area */
+
 .header {
   display: flex;
   /* flex-direction: row; */
   justify-content: space-between;
-  background: url(../img/wave.jpg) no-repeat top center;
+  background: url(../img/wave.jpg) no-repeat center right;
   background-size: cover;
-  min-height: 100vh;
+  min-height: 130vh;
 }
 
 .header-left {
@@ -62,11 +64,64 @@ ul li a {
   color: white;
 }
 
+/* banner aria */
+
 .header-banner {
   display: flex;
   position: absolute;
   justify-content: center;
   align-items: center;
-  top: 250px;
+  top: 100px;
   left: 650px;
+}
+
+.top {
+  font-size: 8.2rem;
+  color: white;
+}
+
+.p {
+  position: absolute;
+  top: 23vh;
+  min-width: 20vw;
+  text-align: center;
+  /* left: 10px; */
+  margin-left: -50px;
+  margin-top: 110px;
+  font-size: 40px;
+  font-style: italic;
+  color: white;
+}
+
+.button {
+  position: absolute;
+  top: 30vh;
+  text-align: center;
+  /* left: 10px; */
+  /*   margin-left: 79px; */
+  margin-top: 130px;
+  padding: 20px 40px;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: -40px;
+  background: linear-gradient(to right, rgb(27 41 125 / 0%), rgb(0 154 255));
+  color: white;
+  /*   border: linear-gradient(to right, rgb(27 41 125 / 0%), rgba(255,0,0,1)); */
+  border-radius: 20px;
+}
+
+/* content area */
+
+.content {
+  min-height: 30vh;
+  background: #fff2f214;
+  text-align: center;
+  /*   min-width:20px;
+  overflow:hidden; */
+  margin: 0 290px;
+}
+
+.content h1 {
+  margin-top: 20vh;
+  color: #838080;
 }
