--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ ul li a {
 /* content area */
 
 .content {
-  min-height: 30vh;
+  min-height: 20vh;
   background: #fff2f214;
   text-align: center;
   /*   min-width:20px;
@@ -128,92 +128,73 @@ ul li a {
 
 /* gallary section */
 
+/* .galary{} */
+
+/* for test only */
+
 .galary {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(12, ifr);
   grid-auto-rows: minmax(100px, auto);
-  /* grid-template-areas:
-    "item8 item8 item1 item1 item1"
-    "item8 item8 item1 item1"; */
-  min: height 100vh;
+  grid-gap: 10px;
+  max-width: 1860px;
+  margin: 0 auto;
 }
 
-.galary .item1 {
-  background: url(.//img/1gnYuBa3-500x500.jpg) no-repeat center;
-  /* grid-area: item1; */
-  grid-column: 1/3;
-  grid-row: 1/1;
+.galary > * {
+  background: rgb(63, 123, 202);
+  padding: 30px;
+  color: white;
 }
 
-.galary .item2 {
-  background: url(.//img/11740750174_e4ee04b4e6_b-500x500.jpg) no-repeat center;
-  /* grid-area: item1; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item1 {
+  grid-column: 1/7;
+  grid-row: 1/5;
+  background: url(../img/wave.jpg);
 }
 
-.galary .item3 {
-  background: url(.//img/be-500x500.jpg) no-repeat center;
-  /* grid-area: item2; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item2 {
+  grid-column: 7/10;
+  grid-row: 1/3;
+  background: url(../img/stoky.jpg);
 }
 
-.galary .item4 {
-  background: url(.//img/by-the-sea1-500x500.jpg) no-repeat center;
-  /* grid-area: item3; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item3 {
+  grid-column: 10/13;
+  grid-row: 1/3;
 }
 
-.galary .item5 {
-  background: url(.//img/wave1.jpg) no-repeat center;
-  /* grid-area: item4; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item4 {
+  grid-column: 7/10;
+  grid-row: 3/5;
 }
 
-.galary .item6 {
-  background: url(.//img/girl-500x500.jpg) no-repeat center;
-  /* grid-area: item5; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item5 {
+  grid-column: 10/13;
+  grid-row: 3/5;
 }
 
-.galary .item7 {
-  background: url(.//img/keb1nsr1.jpg) no-repeat center;
-  /* grid-area: item6; */
-  grid-row: 1/1;
-  grid-column: 3/5;
-}
-.galary .item7 {
-  background: url(.//img/people-500x500.jpg) no-repeat center;
-  /* grid-area: item7; */
-  /* grid-column: 6/9; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item6 {
+  grid-column: 1/4;
+  grid-row: 5/8;
 }
 
-.galary .item8 {
-  background: url(.//img/Stocksy_txp892408bbAAl000_Medium_478106-1-1000x1000.jpg)
-    no-repeat center;
-  grid-area: item8;
-  /* grid-column: 1/6; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item7 {
+  grid-column: 4/10;
+  grid-row: 5/11;
 }
 
-.galary .item9 {
-  background: url(.//img/tumblr_mxrv8vRMbA1st5lhmo1_12802-1000x853.jpg)
-    no-repeat center;
-  /* grid-area: item9; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item8 {
+  grid-column: 10/13;
+  grid-row: 5/8;
 }
 
-.galary .itemX {
-  background: url(.//img/waves-500x500.jpg) no-repeat center;
-  /* grid-area: itemX; */
-  grid-row: 1/1;
-  grid-column: 3/5;
+.item9 {
+  grid-column: 1/4;
+  grid-row: 8/11;
+}
+
+.itemX {
+  grid-column: 10/13;
+  grid-row: 8/11;
 }
