--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   /* flex-direction: row; */
   justify-content: space-between;
-  background: url(../img/wave.jpg) no-repeat center right;
+  background: url(../img/wave1.jpg) no-repeat center right;
   background-size: cover;
   min-height: 130vh;
 }
@@ -25,7 +25,7 @@ body {
   /* color: #fff; */
 }
 .header-right {
-  margin-right: 950px;
+  margin-right: 740px;
 }
 
 ul {
@@ -37,6 +37,7 @@ ul li {
   display: inline-block;
   color: #fff;
   margin: 5px;
+  font-size: 1.5rem;
 }
 
 ul li a {
@@ -137,8 +138,9 @@ ul li a {
   grid-template-columns: repeat(12, ifr);
   grid-auto-rows: minmax(100px, auto);
   grid-gap: 10px;
-  max-width: 1860px;
-  margin: 0 auto;
+  /* max-width: 1860px; */
+  /* margin: 0 auto; */
+  text-align: center;
 }
 
 .galary > * {
@@ -150,51 +152,94 @@ ul li a {
 .item1 {
   grid-column: 1/7;
   grid-row: 1/5;
-  background: url(../img/wave.jpg);
+  background: url(../img/keb.jpg) no-repeat right center;
 }
 
 .item2 {
   grid-column: 7/10;
   grid-row: 1/3;
-  background: url(../img/stoky.jpg);
+  background: url(../img/sea.jpg);
 }
 
 .item3 {
   grid-column: 10/13;
   grid-row: 1/3;
+  background: url(../img/girl-500x500.jpg) no-repeat center center;
 }
 
 .item4 {
   grid-column: 7/10;
   grid-row: 3/5;
+  background: url(../img/waves-500x500.jpg) no-repeat center center;
 }
 
 .item5 {
   grid-column: 10/13;
   grid-row: 3/5;
+  background: url(../img/girl-500x500.jpg) no-repeat center center;
 }
 
 .item6 {
   grid-column: 1/4;
   grid-row: 5/8;
+  background: url(../img/keb.jpg) no-repeat left center;
 }
 
 .item7 {
   grid-column: 4/10;
   grid-row: 5/11;
+  background: url(../img/wave1.jpg) no-repeat center center;
 }
 
 .item8 {
   grid-column: 10/13;
   grid-row: 5/8;
+  background: url(../img/tmb.jpg) no-repeat center center;
 }
 
 .item9 {
   grid-column: 1/4;
   grid-row: 8/11;
+  background: url(../img/tumblr_m.jpg) no-repeat center center;
 }
 
 .itemX {
   grid-column: 10/13;
   grid-row: 8/11;
+  background: url(../img/tumblr.jpg) no-repeat center center;
+}
+
+.all {
+  font-style: italic;
+}
+
+/* footer area*/
+
+.footer {
+  min-height: 50vh;
+  background: #12262f;
+  display: flex;
+  text-align: center;
+}
+
+.div1,
+.div2,
+.div3,
+.div4 {
+  margin-top: 80px;
+}
+
+.social-icon {
+  min-height: 10vh;
+  background: #413d39;
+  text-align: center;
+  line-height: 10vh;
+  padding: 10px;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 2.5rem;
+  color: #4ecbcb;
+  cursor: pointer;
 }
