--- a/style.css
+++ b/style.css
@@ -72,13 +72,14 @@ ul li a {
   position: absolute;
   justify-content: center;
   align-items: center;
-  top: 100px;
-  left: 650px;
+  top: 300px;
+  left: 850px;
 }
 
 .top {
   font-size: 8.2rem;
   color: white;
+  margin-top: 200px;
 }
 
 .p {
